--- a/demo-config.properties
+++ b/demo-config.properties
@@ -9,4 +9,4 @@ app2.prop1.name=This is app2 prop1 name
 app2.prop1.desc=This is app2prop1 desc
 
 app2.prop2.name=This is app2 prop2 name
-app2.prop2.desc=This is app2 prop2 desc
+app2.prop2.desc=This is app2 prop2 desc edited
