--- a/yatrigan-config-server-accessor.properties
+++ b/yatrigan-config-server-accessor.properties
@@ -1,7 +1,7 @@
 app1.prop1.name=This is app1 prop1 name
 app1.prop1.desc=This is app1 prop1 desc
 
-app1.prop2.name=This is app1 prop2 name
+app1.prop2.name=This is app1 prop2 name edited
 app1.prop2.desc=This is app1 prop2 desc
 
 
